WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2005-03-05


Version 0.1.1 (under dev!):
   * added crash dump when WeeChat receives SIGSEGV (Segmentation fault)
   * added new display engine: doesn't cut words at end of lines
   * added DCC send and DCC chat
   * added spanish translation
   * connection to IRC server is now made by child process (non blocking)
   * added support for UnrealIrcd ("~" for chan owner, "&" for chan admin)
   * new key for window switch (now: F5/F6=switch buffer, F7/F8=switch window)
   * on server buffer, only server messages are logged
   * improved /help command output
   * plugins messages are logged with new config option (log_plugin_msg)
   * fixed /buffer close command (now ok when disconnected from server)
   * fixed display bugs when many windows are opened

Version 0.1.0 (2005-02-12):
   * improved /window command: now split and merge are ok
   * away nicks are now displayed with another color (new option: "irc_away_check")
   * added away indicator in status bar
   * added lag indicator (and auto-disconnect after a delay if important lag)
   * improved completion: now completes commands arguments (IRC and internal),
     when only one completion matches, completion mechanism is stoped (to
     complete command arg for example)
   * improved /set command: empty strings are allowed, new colors, server
     options can be changed while WeeChat is running
   * added default away/part/quit messages in config file
   * new [irc] section in config file, option "look_display_away" moved to
     "irc_display_away"
   * server messages & errors are all prefixed (by 3 chars, like '-@-')
   * added new options for charset (UTF-8 support): look_charset_decode,
     look_charset_encode and look_charset_internal
   * fixed many memory leaks
   * fixed colors bug: removed "gray" color (replaced by "default"), colors are
     ok when terminal has white (or light) background